@startuml
'https://plantuml.com/class-diagram

class Receptionist
class Administrator
class Nurse
class Employee{
name
phoneNumber
address
emailAddress
citizenCardNumber
companyID
}
Employee <|-down- Nurse
Employee <|-down- Receptionist
Employee <|-down- CenterCoordinator


Administrator "1" -left- "*" Employee : requires a list of employees with a given role >

@enduml